Some more tests for Solution