@@ -1,5 +1,6 @@
 package backend;
 import fr.insa.rennes.info.chemical.backend.Solution;
+import fr.insa.rennes.info.chemical.user.ReactionRule;
 import junit.framework.TestCase;
 
 /**
@@ -36,9 +37,47 @@ public class SolutionTest extends TestCase {
 	/**
 	 * Test method for {@link Solution#add(Object)}.
 	 */
-	public void testAdd() {
-		testSolution.add(new Integer(12));
+	public void testAddInteger() {
+		testSolution.add(Integer.valueOf(12));
 		assertTrue(this.testSolution.contains(12));
+	}
+
+	/**
+	 * Test method for {@link Solution#add(Object)}.
+	 */
+	public void testAddObject() {
+		Object foo = new Object();
+		testSolution.add(foo);
+		assertTrue(this.testSolution.contains(foo));
+	}
+
+	/**
+	 * Test method for {@link Solution#add(Object)}.
+	 */
+	public void testAddReactionRule() {
+		ReactionRule rr = new ReactionRule(){
+			public Object[] computeResult(){
+				return null;
+			}
+			public boolean computeSelect(){
+				return true;
+			}
+			public ReactionRule.Multiplicity getMultiplicity(){
+				return ReactionRule.Multiplicity.ONE_SHOT;
+			}
+		};
+		testSolution.add(rr);
+		assertTrue(this.testSolution.contains(rr));
+	}
+
+	/**
+	 * Test method for {@link Solution#add(Object)}.
+	 */
+	public void testAddSolution() {
+		Solution barSol = new Solution();
+		barSol.add(new Object());
+		testSolution.add(barSol);
+		assertTrue(this.testSolution.contains(barSol));
 	}
 
 
